# sentiric-traffic-cache

./: .gitignore  Cargo.toml  Dockerfile  README.md  TASKS.md  cargo.toml  config.toml  docker-compose.yml  rules.toml
.github/workflows/: ci.yml  docker-build.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/companion/: Cargo.toml  tauri.conf.json
crates/companion/assets/: com.sentiric.traffic-cache.desktop
crates/companion/icons/: icon.icns
crates/companion/src-tauri/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: cache.rs  certs.rs  config.rs  dns.rs  downloader.rs  lib.rs  management.rs  proxy.rs  rules.rs  web_server.rs
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  PROJECT_GENESIS.md  SPECIFICATION.md
tests/: Dockerfile.tester  docker-compose.integration.yml  entrypoint.sh  helpers.sh  rules.test.toml  run-local-tests.sh  test-runner.sh
tests/scenarios/: 01_dns.test.sh  02_cache.test.sh  03_rule_block.test.sh  04_rule_bypass.test.sh  05_dns_block.test.sh  06_dns_bypass.test.sh  07_dns_cache.test.sh  08_docker_commands.test.sh
web/: index.html  package-lock.json  package.json  tsconfig.app.json
web/src/: api.ts  app.tsx  index.css  main.tsx  store.ts  vite-env.d.ts
web/src/components/: CodeBlock.tsx  Sidebar.tsx
web/src/pages/: Cache.tsx  ConnectDevice.tsx  Dashboard.tsx  Network.tsx  NetworkFlow.tsx  Rules.tsx  Settings.tsx  Setup.tsx  Spinner.css
